--- a/MyYouthFutures/Views/Founder_Message/Edit.cshtml
+++ b/MyYouthFutures/Views/Founder_Message/Edit.cshtml
@@ -1,15 +1,12 @@
 ﻿@model MyYouthFutures.Models.Founder_Message
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Edit";
 }
 
-<div class="modal-header">
-    <h4 class="modal-title" id="ServicesTitleLabel">Founder Message</h4>
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
-</div>
+<h2>Edit</h2>
 
-
+<h4>Founder_Message</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
