--- a/MyYouthFutures/Views/introArticles/Edit.cshtml
+++ b/MyYouthFutures/Views/introArticles/Edit.cshtml
@@ -1,13 +1,12 @@
 ﻿@model MyYouthFutures.Models.introArticle
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Edit";
 }
-<div class="modal-header">
-    <h4 class="modal-title" id="ServicesTitleLabel">Introduction Article</h4>
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
-</div>
 
+<h2>Edit</h2>
+
+<h4>introArticle</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,8 +15,8 @@
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
                 <label asp-for="ArticleText" class="control-label"></label>
-                <textarea asp-for="ArticleText" class="form-control"></textarea>
-                <span asp-validation-for="ArticleText" class="text-danger"  rows="15" cols="60"></span>
+                <input asp-for="ArticleText" class="form-control" />
+                <span asp-validation-for="ArticleText" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
