--- a/MyYouthFutures/Views/Home/Index.cshtml
+++ b/MyYouthFutures/Views/Home/Index.cshtml
@@ -51,10 +51,10 @@
 <section class="container-fluid services">
     <div class="row">
         <div class="col-xs-12">
-            @foreach (HomeTitle HT in Model.HomeTitle)
+            @foreach (Services SV in Model.Services)
             {
-                <h4 class="services-heading" ng-model="ServicesTitle">Services</h4>
-                <p class="mont-light-light-22 about-services" ng-model="ServicesSubtitle">Our programming is divided into three main areas. Each program area has specific components to meet the needs of the youth in need.</p>
+                <h4 class="services-heading" ng-model="ServicesTitle">@SV.Title</h4>
+                <p class="mont-light-light-22 about-services" ng-model="ServicesSubtitle">@SV.Header</p>
             }
 
         </div>
@@ -91,18 +91,28 @@
 <article class="container-fluid purpose-box">
     <section class="row purpose col-xs-12">
         <div class="row purpose-title">
-            <h2 class="h2-white">OUR</h2>
-            <h2 class="h2-green">PURPOSE</h2>
+            @foreach (Purpose PS in Model.Purpose)
+            {
+                <h2 class="h2-white">@PS.Title</h2>
+            }
+
         </div>
         <div class="row purpose-detail">
             <div class="col-xs-12 no-padding">
-                <p class="montlight-dark-32">To provide unaccompanied, runaway and homeless youth with a safe and nurturing environment where they can develop the needed skills to become active, healthy, successful members of our future world.</p>
+                @foreach (Purpose PS in Model.Purpose)
+            {
+                 <p class="montlight-dark-32">@PS.Message</p>
+            }
+                
             </div>
         </div>
         <div class="row purpose-stats">
             <div class="col-xs-12">
-                <p><span class="alt-color">7,085</span> MEALS SERVED. <span class="alt-color">511</span> DROP-IN SERVICES.</p>
-                <p><span class="alt-color">245</span> STREET OUTREACH HOURS. <span class="alt-color">64</span> SHELTERED YOUTH.</p>
+                @foreach (Purpose PS in Model.Purpose)
+            {
+                 <p>@PS.Content</p>
+                }
+
             </div>
         </div>
     </section>
@@ -130,48 +140,23 @@
     <section class="row purpose-user">
         <!--<div class="purpose-boxes">-->
         <div class="boxes">
+            @foreach (Link Lk in Model.Link)
+            {
             <article class="col-xs-3 panel">
                 <section class="panel-img-container">
-                    <img src="~/images/heart_hand.svg" alt="Volunteer" class="panel-img" />
+                    <img src="@Lk.Image" alt="Volunteer" class="panel-img" />
                 </section>
                 <section>
-                    <p class="panel-heading">Apply to Volunteer</p>
+                    <p class="panel-heading">@Lk.Title</p>
                 </section>
                 <section>
-                    <p class="mont-light-light-22 panel-summary">Make your mark where it matters. Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse.</p>
+                    <p class="mont-light-light-22 panel-summary">@Lk.Message</p>
                 </section>
                 <section class="panel-footer">
-                    <p class="quicksand-light-24-green"><a href="#">Volunteer Now ></a></p>
+                    <p class="quicksand-light-24-green"><a href="#">@Lk.Hyperlink ></a></p>
                 </section>
             </article>
-            <article class="col-xs-3 panel">
-                <section class="panel-img-container">
-                    <img src="~/images/girl_icon.png" alt="Youth Stories" class="panel-img" />
-                </section>
-                <section>
-                    <p class="panel-heading">Youth Stories</p>
-                </section>
-                <section>
-                    <p class="mont-light-light-22 panel-summary">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna.</p>
-                </section>
-                <section class="panel-footer">
-                    <p class="quicksand-light-24-green"><a href="#">Read the Stories ></a></p>
-                </section>
-            </article>
-            <article class="col-xs-3 panel">
-                <section class="panel-img-container">
-                    <img src="~/images/calendar_icon.png" alt="Events" class="panel-img" />
-                </section>
-                <section>
-                    <p class="panel-heading">Events</p>
-                </section>
-                <section>
-                    <p class="mont-light-light-22 panel-summary">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna.</p>
-                </section>
-                <section class="panel-footer">
-                    <p class="quicksand-light-24-green"><a href="#">View All Events ></a></p>
-                </section>
-            </article>
+            }
         </div>
     </section>
 </article>
