--- a/MyYouthFutures/Views/introArticles/Edit.cshtml
+++ b/MyYouthFutures/Views/introArticles/Edit.cshtml
@@ -1,13 +1,14 @@
 ﻿@model MyYouthFutures.Models.introArticle
 
 @{
-    ViewData["Title"] = "Edit";
+    Layout = null;
 }
 
-<h2>Edit</h2>
+<div class="modal-header">
+    <h4 class="modal-title" id="ServicesTitleLabel">Introduction</h4>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
+</div>
 
-<h4>introArticle</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -15,7 +16,7 @@
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
                 <label asp-for="ArticleText" class="control-label"></label>
-                <input asp-for="ArticleText" class="form-control" />
+                <textarea asp-for="ArticleText" class="form-control" rows="15" cols="60"></textarea>
                 <span asp-validation-for="ArticleText" class="text-danger"></span>
             </div>
             <div class="form-group">
