--- a/MyYouthFutures/Views/Founder_Message/Edit.cshtml
+++ b/MyYouthFutures/Views/Founder_Message/Edit.cshtml
@@ -1,12 +1,13 @@
 ﻿@model MyYouthFutures.Models.Founder_Message
 
 @{
-    ViewData["Title"] = "Edit";
+    Layout = null;
 }
 
-<h2>Edit</h2>
-
-<h4>Founder_Message</h4>
+<div class="modal-header">
+    <h4 class="modal-title" id="ServicesTitleLabel">Founder Message</h4>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
+</div>
 <hr />
 <div class="row">
     <div class="col-md-4">
