Made modals centralized
Note: for most of the modals, you can use .centered to center them in containers. However, that does not include the login modal. For some reason using the centered css class doesn't work properly, I'm guessing that it's because it's not in a column.

--- a/MyYouthFutures/Views/Popups/_AddStaff.cshtml
+++ b/MyYouthFutures/Views/Popups/_AddStaff.cshtml
@@ -2,7 +2,7 @@
 @*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
-<div id="staff" class="container_modal1">
+<div id="staff" class="container_modal1 centered">
     <form id="staff2" class="container_modal2">
         <div class="">
             <div class="titleBox row">
@@ -16,7 +16,6 @@
                         <img id="staff_pic" class="col-xs-push-1 col-xs-10" src="~/images/ban_circle.png" title="Image does not exist" alt="Image does not exist" />
                         <input type="file" id="staff_file" class="col-xs-push-1 col-xs-10" required/><!--style="display:none"-->
                         <button id="staff_btn" type="button" onclick="$('#staff_btn').click(function () { $('#staff_file').trigger('click');})" class="col-xs-push-2 col-xs-8">Select Image</button>
-                        <!---->
                     </div>
                 </div>
 
