--- a/MyYouthFutures/Views/Popups/_Login.cshtml
+++ b/MyYouthFutures/Views/Popups/_Login.cshtml
@@ -4,7 +4,7 @@
     <div id="loginCase" class="row">
         <label id="cncl" class="col-xs-push-10 col-xs-2" data-toggle="modal" data-target="#loginPopup"><span class="glyphicon glyphicon-remove"></span></label>
 
-        <div id="loginModal" class="container_modal1 login">
+        <div id="loginModal" class="container_modal1">
 
             <form class="container_modal2">
                 <img class="col-xs-12" src="~/images/yf_logo.svg" />
