--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
 
     <div class="container body-content">
 
-        <div id="loginPopup" class="modal row container">
+        <div id="loginPopup" class="modal container">
             @{
                 Html.RenderPartial("../Popups/_Login");
             }
