--- a/MyYouthFutures/Views/Popups/_AddDonor.cshtml
+++ b/MyYouthFutures/Views/Popups/_AddDonor.cshtml
@@ -1,7 +1,7 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
-<div id="donor" class="container_modal1">
+<div id="donor" class="container_modal1 centered">
     <form id="donor2" class="container_modal2">
         <div class="row">
             <div class="titleBox row">
