removed modal reverted to page load

--- a/MyYouthFutures/Views/Home/About.cshtml
+++ b/MyYouthFutures/Views/Home/About.cshtml
@@ -32,7 +32,7 @@
                 if (ia.ID == 1)
                 {
                     <p class="mont_regular_22_darkgray">@ia.ArticleText</p>
-                    <a asp-controller="introArticles" asp-action="Edit" asp-route-id="@ia.ID" data-target="#editModal" data-toggle="modal">Edit</a>
+                    <a asp-controller="introArticles" asp-action="Edit" asp-route-id="@ia.ID">Edit</a>
                 }
             }
         </section>
