--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
     </environment>
     @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
-@*<body ng-app="app" ng-controller ="editController">
+<body> @*ng-app="app" ng-controller ="editController">
 <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
