Fixed issue with founders message in db

--- a/MyYouthFutures/Views/Home/About.cshtml
+++ b/MyYouthFutures/Views/Home/About.cshtml
@@ -50,7 +50,7 @@
             <section class="col-xs-12  col-md-4 first_img ">
                 <img src=@fm.founderImage class="img-responsive center-block" title="Kristen and Scott" alt="Kristen and Scott">
                 <p class="mont_light_14_white hist_subtitle">@fm.founderSubTetxt</p>
-                <a asp-controller="Founder_Message" asp-action="Edit" asp-route-id="@fm.ID" data-target="#editModal" data-toggle="modal">Edit</a>
+                <a asp-controller="Founder_Message" asp-action="Edit" asp-route-id="@fm.ID">Edit</a>
             </section>
         }
     </div>
