--- a/MyYouthFutures/Views/Founder_Message/Edit.cshtml
+++ b/MyYouthFutures/Views/Founder_Message/Edit.cshtml
@@ -1,14 +1,11 @@
 ﻿@model MyYouthFutures.Models.Founder_Message
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Edit";
 }
 
-<div class="modal-header">
-    <h4 class="modal-title" id="ServicesTitleLabel">Founder Message</h4>
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
-</div>
-<hr />
+<h2>Founders Message</h2>
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
