--- a/MyYouthFutures/Views/introArticles/Edit.cshtml
+++ b/MyYouthFutures/Views/introArticles/Edit.cshtml
@@ -1,13 +1,10 @@
 ﻿@model MyYouthFutures.Models.introArticle
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Edit";
 }
 
-<div class="modal-header">
-    <h4 class="modal-title" id="ServicesTitleLabel">Introduction</h4>
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
-</div>
+<h2>Introduction</h2>
 
 <div class="row">
     <div class="col-md-4">
@@ -16,7 +13,7 @@
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
                 <label asp-for="ArticleText" class="control-label"></label>
-                <textarea asp-for="ArticleText" class="form-control" rows="15" cols="60"></textarea>
+                <textarea asp-for="ArticleText" class="form-control" rows="25" cols="100"></textarea>
                 <span asp-validation-for="ArticleText" class="text-danger"></span>
             </div>
             <div class="form-group">
