--- a/MyYouthFutures/Views/List_Item/Create.cshtml
+++ b/MyYouthFutures/Views/List_Item/Create.cshtml
@@ -18,9 +18,9 @@
                 <span asp-validation-for="TypeOfList" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LiTest" class="control-label"></label>
-                <input asp-for="LiTest" class="form-control" />
-                <span asp-validation-for="LiTest" class="text-danger"></span>
+                <label asp-for="LiText" class="control-label"></label>
+                <input asp-for="LiText" class="form-control" />
+                <span asp-validation-for="LiText" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
