--- a/MyYouthFutures/Views/List_Item/Delete.cshtml
+++ b/MyYouthFutures/Views/List_Item/Delete.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.TypeOfList)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.LiTest)
+            @Html.DisplayNameFor(model => model.LiText)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.LiTest)
+            @Html.DisplayFor(model => model.LiText)
         </dd>
     </dl>
     
