--- a/MyYouthFutures/Views/List_Item/Index.cshtml
+++ b/MyYouthFutures/Views/List_Item/Index.cshtml
@@ -16,7 +16,7 @@
                     @Html.DisplayNameFor(model => model.TypeOfList)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.LiTest)
+                    @Html.DisplayNameFor(model => model.LiText)
                 </th>
             <th></th>
         </tr>
@@ -28,7 +28,7 @@
                 @Html.DisplayFor(modelItem => item.TypeOfList)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.LiTest)
+                @Html.DisplayFor(modelItem => item.LiText)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
