--- a/MyYouthFutures/Views/List_Item/Edit.cshtml
+++ b/MyYouthFutures/Views/List_Item/Edit.cshtml
@@ -1,23 +1,21 @@
 ﻿@model MyYouthFutures.Models.List_Item
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Edit";
 }
 
-<div class="modal-header">
-    <h4 class="modal-title" id="ServicesTitleLabel">Sites</h4>
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
-</div>
+<h2>Street Outreach</h2>
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="TypeOfList" class="control-label"></label>
                 <input asp-for="TypeOfList" class="form-control" />
                 <span asp-validation-for="TypeOfList" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="LiText" class="control-label"></label>
                 <input asp-for="LiText" class="form-control" />
