--- a/MyYouthFutures/Views/Staff_Panel/Details.cshtml
+++ b/MyYouthFutures/Views/Staff_Panel/Details.cshtml
@@ -41,10 +41,10 @@
             @Html.DisplayFor(model => model.email)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.isDirector)
+            @Html.DisplayNameFor(model => model.Director)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.isDirector)
+            @Html.DisplayFor(model => model.Director)
         </dd>
     </dl>
 </div>
