--- a/MyYouthFutures/Views/Staff_Panel/Index.cshtml
+++ b/MyYouthFutures/Views/Staff_Panel/Index.cshtml
@@ -28,7 +28,7 @@
                     @Html.DisplayNameFor(model => model.email)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.isDirector)
+                    @Html.DisplayNameFor(model => model.Director)
                 </th>
             <th></th>
         </tr>
@@ -52,7 +52,7 @@
                 @Html.DisplayFor(modelItem => item.email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.isDirector)
+                @Html.DisplayFor(modelItem => item.Director)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
