--- a/MyYouthFutures/Views/Staff_Panel/Create.cshtml
+++ b/MyYouthFutures/Views/Staff_Panel/Create.cshtml
@@ -38,9 +38,9 @@
                 <span asp-validation-for="email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="isDirector" class="control-label"></label>
-                <input asp-for="isDirector" class="form-control" />
-                <span asp-validation-for="isDirector" class="text-danger"></span>
+                <label asp-for="Director" class="control-label"></label>
+                <input asp-for="Director" class="form-control" />
+                <span asp-validation-for="Director" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
