--- a/MyYouthFutures/Views/Home/Index.cshtml
+++ b/MyYouthFutures/Views/Home/Index.cshtml
@@ -22,6 +22,7 @@
                 @foreach (HomeTitle HT in Model.HomeTitle)
                 {
                     <p class="header-text-greeting col-xs-12">@HT.Title</p>
+                    <a asp-controller="HomeTitles" asp-action="Edit" asp-route-id="@HT.ID">Edit</a>
                 }
                 
             </div>
@@ -29,6 +30,7 @@
                 @foreach (HomeTitle HT in Model.HomeTitle)
                 {
                     <p class="sub-text col-xs-12">@HT.Subtitle</p>
+                    <a asp-controller="HomeTitles" asp-action="Edit" asp-route-id="@HT.ID">Edit</a>
                 }
                 
             </div>
@@ -42,6 +44,7 @@
                 @foreach (HomeTitle HT in Model.HomeTitle)
                 {
                     <span class="mont-semibold-dark-36 have-questions-heading">@HT.SubheaderContent</span>
+                    <a asp-controller="HomeTitles" asp-action="Edit" asp-route-id="@HT.ID">Edit</a>
                 }
                 
             </p>
@@ -55,6 +58,7 @@
             {
                 <h4 class="services-heading" ng-model="ServicesTitle">@SV.Title</h4>
                 <p class="mont-light-light-22 about-services" ng-model="ServicesSubtitle">@SV.Header</p>
+                <a asp-controller="Services" asp-action="Edit" asp-route-id="@SV.ID">Edit</a>
             }
 
         </div>
@@ -80,7 +84,7 @@
                     <section class="panel-footer">
                         <p class="quicksand-light-24-green"><a href="#">Learn more ></a></p>
                     </section>
-                    <a asp-controller="Services_Message" asp-action="Edit" asp-route-id="@SM.ID" data-target="#editModal" data-toggle="modal">Edit</a>
+                    <a asp-controller="Services_Message" asp-action="Edit" asp-route-id="@SM.ID">Edit</a>
                 </article>
             }
 
@@ -94,6 +98,7 @@
             @foreach (Purpose PS in Model.Purpose)
             {
                 <h2 class="h2-white">@PS.Title</h2>
+                <a asp-controller="Purposes" asp-action="Edit" asp-route-id="@PS.PurposeID">Edit</a>
             }
 
         </div>
@@ -101,16 +106,18 @@
             <div class="col-xs-12 no-padding">
                 @foreach (Purpose PS in Model.Purpose)
             {
-                 <p class="montlight-dark-32">@PS.Message</p>
-            }
+                <p class="montlight-dark-32">@PS.Message</p>
+                <a asp-controller="Purposes" asp-action="Edit" asp-route-id="@PS.PurposeID">Edit</a>
+                }
                 
             </div>
         </div>
         <div class="row purpose-stats">
             <div class="col-xs-12">
                 @foreach (Purpose PS in Model.Purpose)
-            {
-                 <p>@PS.Content</p>
+                {
+                    <p>@PS.Content</p>
+                    <a asp-controller="Purposes" asp-action="Edit" asp-route-id="@PS.PurposeID">Edit</a>
                 }
 
             </div>
@@ -155,6 +162,7 @@
                 <section class="panel-footer">
                     <p class="quicksand-light-24-green"><a href="#">@Lk.Hyperlink ></a></p>
                 </section>
+                <a asp-controller="Links" asp-action="Edit" asp-route-id="@Lk.LinkID">Edit</a>
             </article>
             }
         </div>
