--- a/MyYouthFutures/Views/Links/Edit.cshtml
+++ b/MyYouthFutures/Views/Links/Edit.cshtml
@@ -25,8 +25,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Message" class="control-label"></label>
-                <input asp-for="Message" class="form-control" />
-                <span asp-validation-for="Message" class="text-danger"></span>
+                <textarea asp-for="Message" class="form-control"></textarea>
+                <span asp-validation-for="Message" class="text-danger" rows="15" cols="60" ></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
