--- a/MyYouthFutures/Views/Services_Message/Edit.cshtml
+++ b/MyYouthFutures/Views/Services_Message/Edit.cshtml
@@ -1,12 +1,9 @@
 ﻿@model MyYouthFutures.Models.Services_Message
 @{
-    Layout = null;
+    ViewData["Title"] = "Edit";
 }
 
-<div class="modal-header">
-    <h4 class="modal-title" id="ServicesTitleLabel">Services</h4>
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
-</div>
+<h2>Services</h2>
 
 
 <div class="row modal-body">
