Fixed controller for issue with parameter

--- a/MyYouthFutures/Views/Home/About.cshtml
+++ b/MyYouthFutures/Views/Home/About.cshtml
@@ -4,13 +4,13 @@
     Layout = "_Layout";
 }
 
-<div id="donorPopup" class="modal">
+@*<div id="donorPopup" class="modal">
     @{ Html.RenderPartial("../Popups/_AddDonor");}
 </div>
 
 <div id="staffPopup" class="modal">
     @{ Html.RenderPartial("../Popups/_AddStaff");}
-</div>
+</div>*@
 
 <article>
     <div class="container-fluid">
