--- a/MyYouthFutures/Views/Popups/_AddStaff.cshtml
+++ b/MyYouthFutures/Views/Popups/_AddStaff.cshtml
@@ -1,6 +1,5 @@
 ﻿@model MyYouthFutures.Models.Staff_Panel
-
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
+ @*  For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 <div id="staff" class="container_modal1 centered">
     <form asp-action="Create" id="staff2" class="container_modal2">
@@ -14,7 +13,7 @@
                 <div class="col-xs-6">
                     <div id="add_img" class="row"> @* TODO Wire up file upload *@
                         <img id="staff_pic" class="col-xs-push-1 col-xs-10" src="~/images/ban_circle.png" title="Image does not exist" alt="Image does not exist" />
-                        <input type="file" id="staff_file" class="col-xs-push-1 col-xs-10"/> <!--required --style="display:none"-->
+                        <input type="file" id="staff_file" class="col-xs-push-1 col-xs-10"/> <!---required --style="display:none"-->
                         <button id="staff_btn" type="button" onclick="$('#staff_btn').click(function() { $('#staff_file').trigger('click'); })" class="col-xs-push-2 col-xs-8">Select Image</button>
                     </div>
                 </div>
