--- a/MyYouthFutures/Views/Home/About.cshtml
+++ b/MyYouthFutures/Views/Home/About.cshtml
@@ -137,7 +137,7 @@
 </div>
     
 @* ------ STREET OUTREACH ------ *@
-<div class="container-fluid">
+<div id="street_outreach" class="container-fluid">
     <div class="row outreach_bullet">
         <section class="col-xs-12 col-md-6">
             <ul>
