Added fragment to links so that page scrolls to div

--- a/MyYouthFutures/Views/Home/About.cshtml
+++ b/MyYouthFutures/Views/Home/About.cshtml
@@ -131,7 +131,7 @@
 @* ------ END First Year of Service ------ *@
     <div class="container-fluid" id="outreachBanner">
         <div class="row outreach_main_img">
-            <div class="col-xs-8 text">
+            <div class="col-xs-8 text"   id="StreetOutreach">
                 <h2>Street</h2>
                 <h2 class="h2style1">Outreach</h2>
             </div>
@@ -180,7 +180,7 @@
 @* ------ END STREET OUTREACH ------ *@
 <div class="container-fluid" id="directorsMain">
         <div class="row board_header">
-            <div class="col-xs-6 text">
+            <div class="col-xs-6 text" id="Board">
                 <h2>Board of</h2>
                 <h2 class="h2style1">Directors</h2>
             </div>
@@ -204,7 +204,7 @@
     </div>
     <div class="container-fluid" id="staffMain">
         <div class="row board_header">
-            <div class="col-xs-6 text">
+            <div class="col-xs-6 text" id="Staff">
                 <h2>Our</h2>
                 <h2 class="h2style1">Staff</h2>
             </div>
@@ -237,7 +237,7 @@
 
     <div class="container-fluid" id="mediaMain">
         <div class="row media_header">
-            <div class="col-xs-6 text">
+            <div class="col-xs-6 text" id="Media">
                 <h2 class="h2style1">Media</h2>
             </div>
         </div>
@@ -319,7 +319,7 @@
     </div>
     <div class="container-fluid" id="donorsMain">
         <div class="row donor_header">
-            <div class="col-xs-6 text">
+            <div class="col-xs-6 text" id="Donor">
                 <h2 class="h2style1">Donors</h2>
             </div>
         </div>
@@ -331,11 +331,7 @@
         </div>
     </div>
 </div>
-    
 
-    <!--<button onclick="document.getElementById('staffPop').style.display = 'block'">Show Staff</button>-->
-    
-    @*<button type="button" data-toggle="modal" data-target="#donorPopup">Add Donor</button>*@
     <a asp-controller="Doners" asp-action="Create">Add Donor</a>
 <div class="container-fluid">
         <div class="row donor_list">
@@ -493,7 +489,7 @@
         </div>
         <div class="container-fluid" id="donateMain">
             <div class="row donor_header">
-                <div class="col-xs-6 text">
+                <div class="col-xs-6 text" id="Donate">
                     <h2 class="h2style1">Donate</h2>
                 </div>
             </div>
@@ -663,7 +659,7 @@
         </div>
         <div class="container-fluid needs" id="contactMain">
             <div class="row donor_header">
-                <div class="col-xs-6 text">
+                <div class="col-xs-6 text" id="Contact">
                     <h2 class="h2style1">CONTACT</h2>
                 </div>
             </div>
