--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -67,23 +67,23 @@
                             <ul class="dropdown-menu">
                                 <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Donate">Donate</a></li>
 
-                                <li><a asp-area="" asp-controller="Home" asp-action="Index">Events</a></li>@*TODO: This needs linked to the Events Section of the About Page*@
+                                <li><a asp-area="" asp-controller="Home" asp-action="Index">Events</a></li>
                                 <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Donor">Donor Recognition</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
                             <ul class="dropdown-menu">
-                                <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="History">History</a></li>@*TODO: This needs linked to the Histroy Section of the About Page*@
-                                <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Staff">Staff</a></li>@*TODO: This needs linked to the Staff Section of the About Page*@
-                                <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Board">Board</a></li>@*TODO: This needs linked to the Board Section of the About Page*@
-                                <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Media">Media</a></li>@*TODO: This needs linked to the Media Section of the About Page*@
+                                <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="History">History</a></li>
+                                <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Staff">Staff</a></li>
+                                <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Board">Board</a></li>
+                                <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Media">Media</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contact</a>
                             <ul class="dropdown-menu">
-                                <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Contact">Contact Info</a></li>@*TODO: This needs linked to the Contact Info Section of the About Page*@
+                                <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Contact">Contact Info</a></li>
                             </ul>
                         </li>
                         <li class="donate"><a data-toggle="modal" data-target="#loginPopup">Login</a></li>
