--- a/MyYouthFutures/Views/_ViewImports.cshtml
+++ b/MyYouthFutures/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using MyYouthFutures
 @using MyYouthFutures.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, MyYouthFutures
