--- a/MyYouthFutures/wwwroot/css/edit.css
+++ b/MyYouthFutures/wwwroot/css/edit.css
@@ -52,7 +52,6 @@
         background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
         background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
         background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-        
+        text-decoration: none;
         color: #ffffff;
-      
     }
